{
    "version": 1,
    "name": "PlayersInput",
    "maps": [
        {
            "name": "Player",
            "id": "1ccaf2cb-41e7-4e6c-8370-753c364b31dc",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "ebba1c9c-d54b-4fc5-8465-8e729ce3aed7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "f2b28eff-63f2-489d-9b73-b1ee136c34e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltFire",
                    "type": "Button",
                    "id": "807f1a3f-8c80-4981-a7d6-422f2cf370cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d4bc5f93-3970-4c31-badd-f0234881fbaa",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "move",
                    "id": "f4ce2a54-6216-4b91-9f28-bd354b91eda6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7605ec78-e971-4efb-b630-85b3132fbbdf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b05a57e5-2004-4bef-a059-0c0492cd5dbf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a0a5a505-f5dd-4471-aba1-bc957ed3ca59",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4c7975b8-cff2-431e-9906-98b6d0fbf112",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c9a49b01-3253-4372-aa84-7c6f2ca9503c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfa7c724-b0ed-43dc-81db-1d1bb9490c29",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}